--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: VUnit/vunit_action@master
         with:
-          run_file: script/run.py
+          cmd: script/run.py
