--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,10 +3,11 @@ on:
   push:
   pull_request:
 jobs:
-  test:
+  action:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: VUnit/vunit_action@master
+      - name: Run VUnit tests
+        uses: ./
         with:
           cmd: script/run.py
