--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,5 +8,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: VUnit/vunit_action@v0.1.0
+        working-directory: ./seq7_display_driver_lib
         with:
           run_file: script/run.py
