--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,8 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Check workspace
-        run: ls
+        run: pwd
       - uses: VUnit/vunit_action@v0.1.0
         with:
           working-directory: seq7_display_driver_lib
           run_file: script/run.py
+      - name: Check workspace
+        run: pwd
