--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,4 +1,4 @@
-name: VUnit Tests
+name: VUnit Action
 on:
   push:
   pull_request:
@@ -9,9 +9,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Check workspace
         run: pwd
-      - uses: VUnit/vunit_action@v0.1.0
+      - uses: VUnit/vunit_action@master
         with:
           working-directory: seq7_display_driver_lib
-          run_file: script/run.py
+          cmd: script/run.py
       - name: Check workspace
         run: pwd
