--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,6 +11,7 @@ jobs:
         run: pwd
       - uses: VUnit/vunit_action@master
         with:
+          working-directory: seg7_display_driver_ib
           cmd: script/run.py
       - name: Check workspace
         run: pwd
